<resources>
    <string name="app_name">DevisesApp</string>
    <string name="LoginPage">Log in</string>
    <string name="SignupPage">Sign Up</string>
    <string name="WelcomePage">Welcome to Devises App</string>
    <string name="backtoLogin">Already have an account? Log in!</string>
    <string name="backtoSignUp">Don\'t have an account ? Sign Up!</string>
    <string name="password">Change Password</string>
    <string name="email">Email :</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="languages">Languages</string>
    <string name="goback">go back</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="messages_header">messages</string>
    <string name="signature_title">Signature</string>
    <string name="reply_title">Default reply title</string>
    <string name="sync_header">Sync settings</string>
    <string name="sync_title">Enable Sync</string>
    <string name="attachment_summary_off">Attachments will not be downloaded.</string>
    <string name="attachment_summary_on">Attachments will be downloaded automatically</string>
    <string name="attachment_title">Download Attachments</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fr">Français</string>
    <string name="en">English</string>
    <string name="Logged_out">Logged out</string>
    <string name="error_empty_field">Fields cannot be empty</string>
    <string name="error_passwords_notmatching">Passwords do not match</string>
    <string name="signup_success">Account Created</string>
    <string name="main_page">Main Page</string>
    <string name="devises_app">Devises App</string>
    <string name="open_nav">ouvrire navigateur</string>
    <string name="close_nav">close nav</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="convert">convert</string>
    <string name="navigation_drawer_open">nav open</string>
    <string name="navigation_drawer_close">nav close</string>
    <string name="log_out">Log out</string>
    <string name="select_currency">select currency</string>
    <string name="exchange_rate_chart">Exchange Rate Chart</string>
    <string name="no_historical_exchange_rate_data_available">No historical exchange rate data available</string>
    <string name="to_exchange_rate"> Exchange Rate %1$s to %2$s </string>
    <string name="no_data_available_for_the_selected_date_range">No data available for the selected date range.</string>
    <string name="to_rate">%1$s to %2$s Rate</string>
    <string name="historical_exchange_rate_to">Historical Exchange Rate (%1$s to %2$s)</string>
    <string name="change_the_password">Change the password</string>
    <string name="account_settings">Account settings</string>
    <string name="line_chart">Historical Rates</string>
    <string name="preferences">Preferences</string>
    <string name="theme">Theme</string>
    <string name="help">Help</string>
    <string name="support">Support</string>
    <string name="choose_a_language_for_currency_app">choose a language for Currency App</string>
    <string name="back">Back</string>
    <string name="select_the_language_of_your_currency_application">Select the language of your Currency application</string>
    <string name="arrow">arrow</string>
    <string name="select_the_theme_of_your_currency_application">select the theme of your currency application</string>
    <string name="color_lens">color lens</string>
    <string name="enable_dark_theme">enable dark theme</string>
    <string name="agency_map">Agency Map</string>
    <string name="agence_name">Agence Name</string>
    <string name="nom_agence">Nom agence</string>
    <string name="adresse">Adresse</string>
    <string name="distance">Distance</string>
    <string name="conversion">Converter</string>
    <string name="swap_currencies">Swap currencies</string>
    <string name="conversion_result">Converted amount : %1$.2f</string>
    <string name="closest">Closest</string>
    <string name="permission_refuee">Permission denied</string>
    <string name="position_introuvable">Position not found</string>
    <string name="please_enter_an_amount">Please enter an amount</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="please_select_currencies">Please select currencies</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="failed_to_update_password">Failed to update password</string>
    <string name="old_password_is_incorrect">Old password is incorrect</string>
    <string name="logged_out">Logged out!</string>
    <string name="you_have_to_select_a_currency_source">You have to select a currency source</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="converted_amount">Converted Amount</string>
    <string name="_0_00">0.00</string>
    <string name="convert_currency">Convert Currency</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="period">Period</string>
    <string name="last_30_days">Last 30 Days</string>
    <string name="retry">Retry</string>
    <string name="loading_exchange_rates">Loading exchange rates...</string>
    <string name="historical_exchange_rate">Historical Exchange Rate</string>
    <string name="chart_icon">Chart icon</string>
    <string name="app_logo">app_logo</string>
    <string name="becoming_a_customer">Becoming a customer</string>
    <string name="forgot_the_password">Forgot the password ?</string>
    <string name="user_name">User name</string>
    <string name="no_email_available">No email available</string>
    <string name="not_available">Not available</string>
    <string name="verification_email_sent_please_verify_ur_email_you_will_be_logged_out">Verification email sent.Please verify ur email.You will be logged out.</string>
    <string name="updating">Updating...</string>
    <string name="failed_to_update_name">Failed to update name</string>
    <string name="name_updated_successfully">Name updated successfully</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="email_is_the_same">Email is the same</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="not_set">Not set</string>
    <string name="failed_to_send_verification">Failed to send verification: %1$s</string>
    <string name="authentication_failed">Authentication failed: %1$s</string>
    <string name="save">Save</string>
    <string name="email_updated_successfully">Email updated successfully!</string>
    <string name="phone_number_updated_successfully">Phone number updated successfully</string>
    <string name="failed_to_update_phone">Failed to update phone: %1$s</string>
    <string name="verification_failed">Verification failed: %1$s</string>
    <string name="verification_id_missing">Verification ID missing</string>
    <string name="phone_number_updated">Phone number updated</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="cancel">Cancel</string>
    <string name="email_address">Email Address</string>
    <string name="example_email">Harim@gmail.com</string>
    <string name="edit_name">Edit Name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">phone</string>
    <string name="ex_phone">+212 000 00 00 00</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="ex_name">Harim Aicha</string>
    <string name="full_name">Full Name</string>
    <string name="tap_on_any_field_to_edit_your_information">Tap on any field to edit your information</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="arrow_forward">Arrow Forward</string>
    <string name="update_your_personal_information">Update your personal information</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="update_your_account_password">Update your account password</string>
    <string name="lock_icon">Lock Icon</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="current_password_required_for_email_change">Current password (required for email change)</string>
    <string name="home">Home</string>
    <string name="icon">icon</string>
    <string name="menu">Menu</string>
    <string name="agencies">Agencies</string>
    <string name="hoome">Home</string>
    <string name="meenu">Menu</string>
    <string name="nom_de_l_agence">Agency Name</string>
    <string name="ville">City</string>
    <string name="t_l_phone_1">Phone 1</string>
    <string name="t_l_phone_2"> Phone 2</string>
    <string name="fax">Fax</string>
    <string name="horaires">Working Hours</string>
    <string name="itin_raire">Itinerary</string>
    <string name="emaiIl">Email</string>
    <string name="share_ic">share_ic</string>
    <string name="share">Share</string>
    <string name="call">Call</string>
    <string name="phone_ic">phone_ic</string>
    <string name="route">Route</string>
    <string name="route_ic">route_ic</string>
    <string name="time_ic">time_ic</string>
    <string name="location_ic">location_ic</string>
    <string name="light_mode_dark_mode">Light Mode / Dark Mode</string>
    <string name="light_mode">light_mode</string>
    <string name="dark_mode">dark_mode</string>
    <string name="automatic">Automatic</string>
    <string name="currency_name">Currency Name</string>
    <string name="currency_dashboard">Currency dashboard</string>
    <string name="find_nearby_locations">Find nearby locations</string>
    <string name="currency_converter">Currency converter</string>
    <string name="app_preferences">App preferences</string>
    <string name="logouut">Logout</string>
    <string name="sign_out_of_your_account">Sign out of your account</string>
    <string name="for_any_assistance_or_information_request_please_contact_our_customer_relations_center_at">For any assistance or information request, please contact our Customer Relations Center at</string>
    <string name="clock">Clock</string>
    <string name="phonenumber">0522588855</string>
    <string name="_9h00_17h30">9h00 – 17h30</string>
    <string name="monday_friday">Monday - Friday</string>
    <string name="back_to_login">Back to Login</string>
    <string name="password_reset_email_sent_successfully">Password reset email sent successfully!</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="enter_your_email_address_and_we_ll_send_you_a_link_to_reset_your_password">Enter your email address and we\'ll send you a link to reset your password.</string>
    <string name="error_message_here">Error message here</string>
    <string name="email_verification">Email Verification</string>
    <string name="_1_mad">1 %1$s = %2$s MAD</string>
    <string name="taux_indisponible">
        Exchange rate not available for the selected currency pair.</string>
    <string name="_1_mad_">1 %1$s = -- MAD</string>
    <string name="les_taux_de_conversion_sont_titre_indicatif">Exchange rates are indicative</string>
    <string name="montant">
        Amount</string>
</resources>