<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIns="navigation_view"
    >

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/userEmail"
                android:title="@string/email"/>

        </menu>
    </item>

     <group
         android:checkableBehavior="single">
         <item
             android:id="@+id/nav_main_page"
             android:title="@string/main_page" />
         <item
             android:id="@+id/nav_profile"
             android:title="@string/profil" />

            <item
             android:id="@+id/nav_settings"
             android:title="@string/settings" />
     </group>
        <item
            android:title="">
            <menu>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/log_out"/>

            </menu>
        </item>
</menu>